Conitnued styling -- Topics now overflow correctly from fixed background, Topic cards basic styling done

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,18 +64,27 @@ a {
 }
 
 /* FONT */
+h1,
 .h1 {
     font-weight: 600;
     font-size: 48px;
 }
+h2,
 .h2 {
     font-weight: 500;
     font-size: 40px;
 }
+h3,
 .h3 {
     font-weight: 500;
     font-size: 36px;
 }
+h4,
+.h4 {
+    font-weight: 400;
+    font-size: 32px;
+}
+
 .sat20 {
     font-weight: medium;
     font-size: 20px;
@@ -111,14 +120,17 @@ body {
     backdrop-filter: blur(10px);
     position: fixed;
     top: 72px;
+    overflow: visible;
 }
 .scrollable-content {
-    padding-top: 24px;
+    padding-top: 96px;
     position: relative;
+    top: -72px;
     width: var(--content-width);
-    height: 100%;
+    height: 100vh;
     overflow-y: auto;
     scroll-behavior: smooth;
+    z-index: 1;
 }
 .scrollable-content::-webkit-scrollbar {
     display: none;
@@ -134,6 +146,8 @@ header {
     border-top-right-radius: 20px;
     padding: 0 72px;
     backdrop-filter: blur(10px);
+    position: fixed;
+    z-index: 10;
 
     & nav {
         height: 100%;
@@ -198,5 +212,79 @@ aside {
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
         padding: 24px;
+        gap: 12px;
+        position: relative;
+        height: 100%;
+        align-items: stretch;
+
+        & .separator {
+            width: 2px;
+            background-color: var(--blue);
+            border-radius: 2px;
+        }
+
+        & .topic-card_left {
+            flex: 1 1 50%;
+            gap: 24px;
+
+            & .topic-card_info {
+                align-items: center;
+                width: 100%;
+                gap: 24px;
+
+                & .separator {
+                    height: 100%;
+                }
+
+                & .info_user {
+                    gap: 12px;
+                    align-items: center;
+
+                    & .user_pp {
+                        /* MUST CHANGE DEPENDING ON CAT ____________ */
+                        background-color: var(--green);
+                        width: 48px;
+                        height: 48px;
+                        line-height: 48px;
+                        text-align: center;
+                        text-transform: capitalize;
+                        border-radius: 48px;
+                    }
+
+                    & .topic_time {
+                        color: var(--dark-grey);
+                    }
+                }
+
+                & .info_cat {
+                    border-radius: 10px;
+                    border: 1px solid var(--green-dark);
+                    background-color: var(--green-light);
+                    padding: 6px 12px;
+
+                    & .info_cat_btn {
+                        color: var(--green-dark);
+                    }
+                }
+            }
+        }
+
+        & .topic-card_right {
+            flex: 1 1 50%;
+            height: 100%;
+        }
+        & .topic-card_post-count {
+            /* MUST CHANGE DEPENDING ON CAT ____________ */
+            background-color: var(--green);
+            width: 48px;
+            height: 48px;
+            text-align: center;
+            line-height: 48px;
+            border-top-left-radius: 20px;
+            color: var(--white);
+            position: absolute;
+            right: 0;
+            bottom: 0;
+        }
     }
 }
